k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 43567/fiap-proj
        ports:
        - containerPort: 5050
        resources:
            requests:
              cpu: "250m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 5050
        #   initialDelaySeconds: 20
        #   periodSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 5050
        #   initialDelaySeconds: 20
        #   failureThreshold: 3
        #   periodSeconds: 20
      imagePullSecrets:
        - name: backend-registry-secret
