k8s-manifests/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: app
  labels:
    db: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongodb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        db: mongodb
    spec:
      containers:
      - name: mongodb-deployment
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-pv
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          failureThreshold: 3
          periodSeconds: 5
      volumes:
        - name: mongodb-pv
          persistentVolumeClaim:
            claimName: mongodb-pvc
      restartPolicy: Always
