k8s-manifests/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
  - name: service-port
    port: 80
    targetPort: 5050
    nodePort: 30100
