k8s-manifests/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    db: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
